test.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment   # deployment의 이름
  labels:
    app: test-deployment  # deployment의 라벨
  annotations: 
    kubernetes.io/change-cause: version1.9.1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-deployment # replicaset이 관리할 pod 라벨
  template:    # 하위에 pod 정보 설정
    metadata:
      labels:
        app: test-deployment # pod의 라벨
    spec: # 컨테이너 설정
      containers:
      - name: test-deployment
        image: nginx:1.9.1
        ports:
        - containerPort: 80
