test.pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: myapp-pod
 labels:
   app: test-deployment
   pod-template-hash: ff6768df4
spec:
  containers:
  - name: test-deployment
    image: nginx:1.7.9
    ports:
    - containerPort: 80
