test.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  type: NodePort
  selector:
    app: test-deployment
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80  # pod에 실행중인 어플리케이션의 포트(nginx가 80포트로 running중)
      nodePort: 31000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 80 # pod에 실행중인 어플리케이션의 포트(nginx가 80포트로 running중)
      nodePort: 31001
